@@ -1,0 +1,137 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="generator" content="Asciidoctor 2.0.22">
+<title>Design Goal</title>
+<style>
+/*! Copyright (C) 2019, TomTom (http://tomtom.com).
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+/* Extension of the AsciiDoctor CSS for AsciiDoxy.
+ * Adding:
+ * - Floating multipage navigation.
+ */
+@import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";
+@import "https://cdn.jsdelivr.net/gh/asciidoctor/asciidoctor@2.0/data/stylesheets/asciidoctor-default.css";
+
+/* Multipage navigation */
+div#navigation {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+div#navigation table {
+    margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+    body.toc2 div#navigation {
+        left: 15em;
+    }
+    body.toc2.toc-right div#navigation {
+        right: 15em;
+    }
+}
+@media screen and (min-width: 1280px) {
+    body.toc2 div#navigation {
+        left: 20em;
+    }
+    body.toc2.toc-right div#navigation {
+        right: 20em;
+    }
+}
+
+</style>
+</head>
+<body class="article">
+<div id="header">
+<h1>Design Goal</h1>
+</div>
+<div id="content">
+<div class="sect1">
+<h2 id="_mqtt_conformance">MQTT Conformance</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>async_mqtt supports all functionalities of MQTT v3.1.1 and v5.0. Users can send and receive all types of MQTT packets. Some functionalities require stateful endpoint management, which async_mqtt handles efficiently.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_asio_friendly">Asio Friendly</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>async_mqtt supports Asio-style completion tokens, including default completion tokens. Users can bind executors, cancellation slots, and allocators. async_mqtt can work with coroutines, including Asio-style multiple completion waiting.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_high_performance">High Performance</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>async_mqtt supports high-performance communication. Balancing latency and throughput can sometimes be a trade-off, and async_mqtt allows configuration per <code>endpoint</code> and <code>client</code> basis. async_mqtt is used for not only mqtt clients but also high performance brokers. See the <a href="performance.html">performance</a> page for details.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_support_for_various_underlying_layers">Support for Various Underlying Layers</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>async_mqtt supports not only TCP, TLS, and WebSocket but also user-defined underlying layers, including test stubs.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_support_for_both_detailed_low_level_operations_and_convenient_high_level_operations">Support for Both Detailed Low-Level Operations and Convenient High-Level Operations</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>async_mqtt supports detailed operations, such as sending any MQTT packet at any time, through the <code>endpoint</code> component. This flexibility facilitates diverse application development. For typical use cases, high-level APIs are more convenient, provided by the <code>client</code> component. The <code>client</code> is built on top of the <code>endpoint</code>.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_support_for_broker_cluster_development">Support for Broker Cluster Development</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>async_mqtt can be used for broker development. For developing a broker cluster, inter-broker communication is crucial. async_mqtt supports expanded length packet identifiers for this purpose.</p>
+</div>
+<div id="navigation">
+<table class="tableblock frame-none grid-none stretch">
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-middle"><a href="requirements.html">Prev</a></th>
+<th class="tableblock halign-center valign-middle"><a href="index.html">Up</a><br>
+<a href="index.html">Home</a></th>
+<th class="tableblock halign-right valign-middle"><a href="quicklook.html">Next</a></th>
+</tr>
+</thead>
+</table>
+</div>
+</div>
+</div>
+</div>
+<div id="footer">
+<div id="footer-text">
+</div>
+</div>
+</body>
+</html>
