@@ -94,6 +94,9 @@ div#navigation table {
 <li>
 <p><a href="requirements.html">Requirements</a></p>
 </li>
+<li>
+<p><a href="goal.html">Design Goal</a></p>
+</li>
 </ul>
 </div>
 </li>
