@@ -255,7 +255,7 @@ cd example</code></pre>
 </colgroup>
 <thead>
 <tr>
-<th class="tableblock halign-left valign-middle"><a href="requirements.html">Prev</a></th>
+<th class="tableblock halign-left valign-middle"><a href="goal.html">Prev</a></th>
 <th class="tableblock halign-center valign-middle"><a href="index.html">Up</a><br>
 <a href="index.html">Home</a></th>
 <th class="tableblock halign-right valign-middle"><a href="performance.html">Next</a></th>
