@@ -105,7 +105,7 @@ div#navigation table {
 <th class="tableblock halign-left valign-middle"><a href="CHANGELOG.html">Prev</a></th>
 <th class="tableblock halign-center valign-middle"><a href="index.html">Up</a><br>
 <a href="index.html">Home</a></th>
-<th class="tableblock halign-right valign-middle"><a href="quicklook.html">Next</a></th>
+<th class="tableblock halign-right valign-middle"><a href="goal.html">Next</a></th>
 </tr>
 </thead>
 </table>
