@@ -3,6 +3,7 @@
 = History
 
 == 8.0.2
+* Refined documents. #335
 * Added separate compilation mode customization points. #331
 * Added destructor comment for basic_endpoint and client. #330
 * Refined unit_test. #328, #329
